# playwright-localstorage

./: .bandit  .coverage-tmp.html  .gitignore  404.html  CONTRIBUTING.md  Makefile  README.md  formatters-cfg.toml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  python-check.yml  release.yml
docs/guide/: install.md
docs/references/: playwright_localstorage.async_.md  playwright_localstorage.base.md  playwright_localstorage.sync_.md
guide/install/: index.html
license/: index.html
playwright_localstorage/: __init__.py  _async.py  _sync.py  async_.py  base.py  sync_.py
references/playwright_localstorage.async_/: index.html
references/playwright_localstorage.base/: index.html
references/playwright_localstorage.sync_/: index.html
search/: search_index.json
tests/: conftest.py  test_utils.py  types.py  utils.py
tests/assets/: page.html.j2
tests/test_async/: conftest.py  test_accessor.py  test_localstorage.py  test_sessionstorage.py
tests/test_sync/: conftest.py  test_accessor.py  test_sessionstorage.py
