[tool.poetry]
name = "playwright-localstorage"
version = "1.0.0"
description = "Extension for the Playwright package that allows access to the Web Storage API."
documentation = "https://github.com/swimmwatch/playwright-localstorage"
license = "MIT"
readme = "README.md"
homepage = "https://pypi.org/project/playwright-localstorage/"
repository = "https://github.com/swimmwatch/playwright-localstorage"
keywords = ["Playwright", "Web Storage API", "Poetry"]
authors = ["Dmitry Vasiliev <contact.vasiliev.dmitry@gmail.com>"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Framework :: AsyncIO"
]

[tool.poetry.dependencies]
python = "^3.9"
playwright = "1.*"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"
flake8-bandit = "^4.1.1"
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
flake8-quotes = "^3.4.0"
flake8-isort = "^6.1.1"
flake8-string-format = "^0.3.0"
flake8-rst-docstrings = "^0.3.0"
flake8-bugbear = "^24.4.26"
pytest-playwright = "^0.5.0"
pytest-xdist = "^3.6.1"
flake8-pyproject = "^1.2.3"
jinja2 = "^3.1.4"
pytest-asyncio = "^0.23.8"
pytest-playwright-async = "^0.17.0"
nest-asyncio = "^1.6.0"
flake8-pytest-style = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
default_section = "THIRDPARTY"
force_single_line = true
line_length = 120
use_parentheses = true
