[tool.poetry]
name = "playwright-localstorage"
version = "1.0.1"
description = "Extension for the Playwright package that allows access to the Web Storage API."
documentation = "https://github.com/swimmwatch/playwright-localstorage"
license = "MIT"
readme = "README.md"
homepage = "https://pypi.org/project/playwright-localstorage/"
repository = "https://github.com/swimmwatch/playwright-localstorage"
keywords = ["Playwright", "Web Storage API", "Poetry"]
authors = ["Dmitry Vasiliev <contact.vasiliev.dmitry@gmail.com>"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Framework :: AsyncIO"
]

[tool.poetry.dependencies]
python = "^3.9"
playwright = "1.*"
pytest-cov = "^6.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.14.0"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
flake8-bandit = "^4.1.1"
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
flake8-quotes = "^3.4.0"
flake8-isort = "^6.1.1"
flake8-string-format = "^0.3.0"
flake8-rst-docstrings = "^0.3.0"
flake8-bugbear = "^24.12.12"
pytest-playwright = "^0.5.1"
pytest-xdist = "^3.6.1"
flake8-pyproject = "^1.2.3"
jinja2 = "^3.1.5"
pytest-asyncio = "^0.25.0"
pytest-playwright-async = "^1.1.0"
nest-asyncio = "^1.6.0"
flake8-pytest-style = "^2.0.0"
mkdocs-material = "^9.5.49"
mkdocstrings = "^0.27.0"
mkdocstrings-python = "^1.13.0"
mkdocs-coverage = "^1.1.0"
mkdocs-section-index = "^0.3.9"
mkdocs = "^1.6.1"
mkdocs-macros-plugin = "^1.3.7"
mkdocs-minify-plugin = "^0.8.0"
lazydocs = "^0.4.8"
pydocstyle = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
default_section = "THIRDPARTY"
force_single_line = true
line_length = 120
use_parentheses = true
py_version=39
